1.1.2 changes (#532)
* MOSIP-9566 : created 1.1.2

* Fixed Build issue (#490)

* Fixed face stream image issue with captured image

* Added JAI ImageIO JPEG2000

* Added JAI IMAGEIO JPEG2000

* 1. Fixed Biometrics dynamic exception image creation
2. Deleted hardcoded biometric exception images
3. Fixed Face Preview image missing issue
4. Fixed biometrics all mandatory only for applicant issue

* Fixed Pop-Up not closing after capturing exception photo, and added
alert for success

* Fixed Exception Photo Capture Using MDS if spec version is not 0.9.2

* Fixed Exception coming in applicant while marking in auth biometrics

* Fixed Error message in demographic screen

* MOSIP-9269 : Fixed logout taking 20-30 secs time issue

* MOSIP-8441 : Fixed Scan button is not present during packet auth.

* MOSIP-8443,MOSIP-8450 : Fixed UIN Template issue with no demographic

* Fixed realm issue

* Jaxb-runtime - Temporary fix

* MOSIP-9370 : Added logs while parsing registration info to packet
manager

* MOSIP-9370 : changed packet account prop name

* Added Logger

* Fixed source and process to upper case

* Fixed Application primary and secondary language issue in demographic
screen

* MOSIP-9355 : Fixed Icon issue

* MOSIP-9563 : Fixed the issue by validating device in device_master

* MOSIP-9563 : Fixed local device validation (#489)

* Fixed face stream image issue with captured image

* Added JAI ImageIO JPEG2000

* Added JAI IMAGEIO JPEG2000

* 1. Fixed Biometrics dynamic exception image creation
2. Deleted hardcoded biometric exception images
3. Fixed Face Preview image missing issue
4. Fixed biometrics all mandatory only for applicant issue

* Fixed Pop-Up not closing after capturing exception photo, and added
alert for success

* Fixed Exception Photo Capture Using MDS if spec version is not 0.9.2

* Fixed Exception coming in applicant while marking in auth biometrics

* Fixed Error message in demogra